Change vendor actions in php-compat.yml to latest versions
- Update github/checkout to v4
- Update pipeline-components/php-codesniffer to always use master

--- a/.github/workflows/php-compat.yml
+++ b/.github/workflows/php-compat.yml
@@ -23,8 +23,8 @@ jobs:
           - '8.1'
           - '8.2'
     steps:
-      - uses: actions/checkout@v3
-      - uses: pipeline-components/php-codesniffer@v0.28.1
+      - uses: actions/checkout@v4
+      - uses: pipeline-components/php-codesniffer@master
         with:
           options: "-s --extensions=php --standard=PHPCompatibility --runtime-set testVersion ${{ matrix.version }}"
 
